--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: linear-gradient(to right, rgb(134, 133, 133), rgb(0, 0, 0));
+  background: #a4e8e0;
   margin: 0;
   padding: 0;
 }
@@ -26,4 +26,66 @@ body {
 
 .navbar a:hover {
   background-color: rgba(26, 25, 25, 0.8);
+}
+
+.perfil > img {
+  max-width: 250px;
+  max-height: 250px;
+  border-radius: 50%;
+  margin: 10px 10px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+.perfil {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 10vh;
+  padding: 10px;
+  word-wrap: break-word;
+  max-width: 20vw;
+  background-color: #1cddeb18;
+  border-radius: 10%;
+  align-content: center;
+  justify-content: center;
+}
+
+.infoBtn {
+  background-color: #a4e8e0;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.infoBtn:hover {
+  background-color: #50eedb;
+  cursor: pointer;
+}
+
+.infoDiv {
+  font-size: 1.1rem;
+  display: none;
+}
+
+p > a {
+  text-decoration: none;
+  color: #333;
+  margin: 10px;
+  padding: 10px;
+}
+
+p > a:hover {
+  background-color: #3896ee;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  background-color: #54eedc;
+  margin-top: 5%;
 }
