--- a/css/task.css
+++ b/css/task.css
@@ -14,6 +14,7 @@ body {
   font-family: Verdana, Tahoma, sans-serif;
   font-size: 1.1rem;
   font-weight: bold;
+  width: 100vw;
   height: 5vh;
 }
 
